<resources>
    <string name="app_name">DreamWorld</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Scanner</string>
    <string name="title_notifications">Profile</string>
    <string name="todo">TODO</string>
    <string name="join_the_smarter_way_to_dream_world_with_lots_of_benefits">Join the Smarter way to dream world with lots of benefits</string>
    <string name="enter_email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="go">Go</string>
    <string name="enter_your_current_register_email_we_will_send_new_password_on_email">Enter your current register email we will send new password on email</string>
    <string name="event">Event</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="completed_event">Completed Event</string>
    <string name="_1">0</string>
    <string name="customer_registered">Customer Registered</string>
    <string name="scan_qr">Scan QR</string>
    <string name="click_below_button_to_scan_qr_tickets">Click below button to scan QR Tickets</string>
    <string name="scanner">Scanner</string>
    <string name="or_nsearch_ticket_by_code">OR\nSearch Ticket By Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="search">Search</string>
    <string name="sell_ticket">Sell Ticket</string>
    <string name="customer_name">Customer Name</string>
    <string name="whatsapp_mobile_number">WhatsApp Mobile Number</string>
    <string name="select_show">Select Show</string>
    <string name="event_title">Event Title</string>
    <string name="number_of_passes">Number of Passes</string>
    <string name="full_name">Full Name</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="branch_name">Branch Name</string>
    <string name="logout">Logout</string>
    <string name="person_capacity">Person Capacity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_detail">Event Detail</string>
    <string name="search_by_code">Search By Code</string>

    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="please_enter_the_email_address">Please enter the email address.</string>
    <string name="please_enter_the_password">Please enter the password.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logging_out">Logging Out?</string>
    <string name="alert_logout">Are you sure you want to log out from the dreamWorld application?</string>
    <string name="events">Events</string>
    <string name="add_customer">Add customer</string>
    <string name="registered_customers">"Ticket Booked"</string>
    <string name="no_data">No Details Found</string>
    <string name="customer">Customer</string>
    <string name="customers">Customers</string>
    <string name="register_customer_list">Register Customer List</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="reset_your_account_password_using_below_fields">Reset your account password using below fields</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change Password</string>
    <string name="note_the_password_should_contain_at_least_8_characters_1_digit_1_lowercase_letter_1_uppercase_letter_amp_1_special_character_including_amp_gt_lt"><![CDATA[Note: The password should contain at least 8 characters, 1 digit, 1 lowercase letter, 1 uppercase letter & 1 special character including (@!#$%^&*();\'.,/?><)]]></string>
</resources>