<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/imgLogo"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_130sdp" />

    <TextView
        android:id="@+id/tvBrand"
        android:fontFamily="@font/goldman_regular"
        android:paddingHorizontal="@dimen/_30sdp"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:text="@string/join_the_smarter_way_to_dream_world_with_lots_of_benefits"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <com.google.android.material.textfield.TextInputEditText
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tvBrand"
            android:id="@+id/edtEmail"
             style="@style/editTextStyle"
          android:imeOptions="actionNext"
              android:hint="@string/enter_email"
              android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

        </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        android:id="@+id/edtPassword"
        style="@style/editTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
    </com.google.android.material.textfield.TextInputEditText>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="0sp"
        android:paddingEnd="@dimen/_15sdp"
        android:tint="@color/white"
        android:src="@drawable/ic_eye_off"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword" />


    <TextView
        android:id="@+id/tvForgot"
        android:fontFamily="@font/goldman_regular"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:gravity="end|center"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/tvForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:id="@+id/btnLogin"
        android:imeOptions="actionDone"
        android:text="@string/login"
        android:textSize="@dimen/_13ssp"
        app:rippleColor="#123456"
        android:fontFamily="@font/goldman_bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>