<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rlTopBar"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/iimgBack"
            android:contentDescription="@string/todo"
            android:scaleType="center"
            android:src="@drawable/ic_left"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent">
        </ImageView>

        <TextView
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/goldman_bold"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/sell_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tvEventName"
            android:text="@string/event_title"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/goldman_bold"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp">
        </TextView>

        <TextView
            android:alpha="0.5"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tvName"
            android:text="Test Event"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/monda"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp">
        </TextView>


        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/tvCustomerTitle"
            android:text="Customer Detail"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/goldman_bold"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp">
        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCustomerTitle"
            android:id="@+id/edtName"
            style="@style/editTextStyleTwo"
            android:imeOptions="actionNext"
            android:hint="@string/full_name"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtName"
            android:id="@+id/edtPhone"
            style="@style/editTextStyleTwo"
            android:imeOptions="actionNext"
            android:hint="@string/whatsapp_mobile_number"
            android:inputType="number"
            android:digits="0123456789"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPhone"
            android:id="@+id/edtEmail"
            style="@style/editTextStyleTwo"
            android:imeOptions="actionNext"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
        </com.google.android.material.textfield.TextInputEditText>

        <TextView
            app:drawableEndCompat="@drawable/outline_arrow_drop_down_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            android:id="@+id/edtShow"
            style="@style/editTextStyleTwo"
            android:text="@string/select_show"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
        </TextView>

        <com.google.android.material.textfield.TextInputEditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtShow"
            android:id="@+id/edtMemberPass"
            style="@style/editTextStyleTwo"
            android:imeOptions="actionNext"
            android:hint="@string/number_of_passes"
            android:inputType="number"
            android:maxLength="3"
            android:digits="0123456789"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtMemberPass"
            android:id="@+id/edtPrice"
            style="@style/editTextStyleTwo"
            android:imeOptions="actionDone"
            android:hint="@string/amount"
            android:inputType="number"
            android:digits="0123456789"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.button.MaterialButton
            app:layout_constraintTop_toBottomOf="@id/edtPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:id="@+id/btnPurchase"
            android:imeOptions="actionDone"
            android:text="@string/save"
            android:textSize="@dimen/_13ssp"
            android:maxLength="5"
            app:rippleColor="@color/white"
            android:fontFamily="@font/goldman_bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>