<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:fontFamily="@font/goldman_regular"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvBrand"
        android:fontFamily="@font/goldman_regular"
        android:paddingHorizontal="@dimen/_30sdp"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:text="@string/enter_your_current_register_email_we_will_send_new_password_on_email"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.textfield.TextInputEditText
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBrand"
        android:id="@+id/edtEmail"
        style="@style/editTextStyleTwo"
        android:imeOptions="actionNext"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:id="@+id/btnForgotPassword"
        android:imeOptions="actionDone"
        android:text="@string/go"
        android:textSize="@dimen/_13ssp"
        app:rippleColor="#123456"
        android:fontFamily="@font/goldman_bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>