<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.auth.changepassword.ChangePasswordFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_please"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/monda"
        android:gravity="center"
        android:text="@string/reset_your_account_password_using_below_fields"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword"
        style="@style/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_please"></com.google.android.material.textfield.TextInputEditText>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="0sp"
        android:paddingEnd="@dimen/_15sdp"
        android:src="@drawable/ic_eye_off"
        android:tint="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtConfirmPassword"
        style="@style/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword">

    </com.google.android.material.textfield.TextInputEditText>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_confirm_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="0sp"
        android:paddingEnd="@dimen/_15sdp"
        android:src="@drawable/ic_eye_off"
        android:tint="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/edtConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/edtConfirmPassword"
        app:layout_constraintTop_toTopOf="@id/edtConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/goldman_bold"
        android:imeOptions="actionDone"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"
        app:rippleColor="#123456" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_note"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monda"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/note_the_password_should_contain_at_least_8_characters_1_digit_1_lowercase_letter_1_uppercase_letter_amp_1_special_character_including_amp_gt_lt"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChange" />

</androidx.constraintlayout.widget.ConstraintLayout>