<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ScannerFragment">

    <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:background="@color/black"
        android:fontFamily="@font/goldman_bold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:text="Profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />


    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvUserName"
        android:textStyle="bold"
        android:text="@string/full_name"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/monda"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
    </TextView>

    <TextView
        android:alpha="0.6"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/UserName"
        tools:text="Nisarg Trivedi"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/monda"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
    </TextView>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/UserName"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvPhone"
        android:textStyle="bold"
        android:text="@string/phone"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/monda"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
    </TextView>

    <TextView
        android:alpha="0.6"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/Phone"
        tools:text="9978538694"
        android:text="9978538694"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/monda"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
    </TextView>

    <TextView
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/Phone"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvBranch"
        android:textStyle="bold"
        android:text="@string/branch_name"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/monda"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
    </TextView>

    <TextView
        android:alpha="0.6"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tvBranch"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/Branch"
        tools:text="Maninagar"
        android:text="Maninagar"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/monda"
        android:gravity="center|start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp">
    </TextView>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/Branch"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:id="@+id/btnLogout"
        android:imeOptions="actionDone"
        android:text="@string/logout"
        android:textSize="@dimen/_13ssp"
        app:rippleColor="@color/white"
        android:fontFamily="@font/goldman_bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</androidx.constraintlayout.widget.ConstraintLayout>